apps/home/media/discord-quote-bot/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-quote-bot
  namespace: media
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: discord-quote-bot
          volumeMounts:
            - name: discord-quote-bot-storage
              mountPath: /data
      volumes:
        - name: discord-quote-bot-storage
          persistentVolumeClaim:
            claimName: discord-quote-bot-data-pvc
